[bugfix] - align left accordion title

--- a/wp-content/themes/fred/assets/sass/molecules/block/_accordion.scss
+++ b/wp-content/themes/fred/assets/sass/molecules/block/_accordion.scss
@@ -24,6 +24,7 @@
     width: 100%;
     border: 0;
     background-color: transparent;
+    text-align: left;
     text-align-last: left;
     justify-content: space-between;
     align-items: center;
